# sanalouhos

./: .gitignore  Cargo.toml  README.md  board.txt  board1405.txt  board1505.txt  board2.txt  board3.txt  board4.txt  page_template.html  sanalista2.csv
.github/workflows/: daily.yml
src/: common.rs  find_all_words.rs  find_solution.rs  kotus.rs  main.rs  neighbors.rs  requests.rs
