[package]
name = "sanalouhos"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
reqwest = { version = "0.12.4", features = ["blocking"] }
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
